fix: Adjust overflow property to allow horizontal scrolling in markdown body

--- a/src/components/shared/mdx/mdx.module.css
+++ b/src/components/shared/mdx/mdx.module.css
@@ -5,5 +5,5 @@
 }
 
 .markdownBody {
-  overflow: scroll;
+  overflow-x: scroll;
 }
